JavaFX - Responsive Layout similar to Bootstrap CSS Framework