@@ -2,11 +2,26 @@
 
 Do you need help on handling fields and tables in Java? LT Libraries is here for you!
 
-LT Libraries allows you to easily insert custom fields (Integer, Long, Double, String, Text, Date, Hour, Boolean) and to manipulate tables for graphical user interface (GUI) Java programs.
+LT Libraries allows you to easily create custom fields (Integer, Long, Double, String, Text, Date, Hour, Boolean) and to manipulate tables for graphical user interface (GUI) Java programs using Swing.
+
+Create a JavaFX Responsive Layout similar to Bootstrap CSS Framework.
 
 ----------------------------------------------------------------------------------
 
-Dependencies:
+## Dependencies
 
-MigLayout
-http://www.migcalendar.com/miglayout/versions/3.5.5/miglayout-3.5.5.jar
+JavaFX
+
+https://openjfx.io/openjfx-docs/
+
+Download the appropriate JavaFX SDK for your operating system and unzip it to a desired location.
+
+Add VM options to run the 'LTLibrariesResponsiveFX' example:
+
+--module-path "\path\to\javafx-sdk-20\lib" --add-modules javafx.controls,javafx.fxml
+
+----------------------------------------------------------------------------------
+
+## TODO:
+
+Custom fields and tables for JavaFX.
